<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_workbench_ros_control</name>
  <version>0.0.1</version>
  <description>ros_control hardware interface integration with dynamixel_workbench</description>
  <license>Apache 2.0</license>

  <author email="y-tanaka@jsk.t.u-tokyo.ac.jp">Yoshimaru Tanaka</author>
  <maintainer email="y-tanaka@jsk.t.u-tokyo.ac.jp">Yoshimaru Tanaka</maintainer>
  <url type="repository">https://github.com/yoshimalucky/dynamixel_workbench_ros_control</url>
  <url type="bugtracker">https://github.com/yoshimalucky/dynamixel_workbench_ros_control/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>dynamixel_workbench_toolbox</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
