<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_workbench_ros_control</name>
  <version>0.0.1</version>
  <description>ros_control hardware interface integration with dynamixel_workbench</description>
  <license>Apache 2.0</license>

  <author email="y-tanaka@jsk.t.u-tokyo.ac.jp">Yoshimaru Tanaka</author>
  <maintainer email="y-tanaka@jsk.t.u-tokyo.ac.jp">Yoshimaru Tanaka</maintainer>
  <url type="repository">https://github.com/yoshimalucky/dynamixel_workbench_ros_control</url>
  <url type="bugtracker">https://github.com/yoshimalucky/dynamixel_workbench_ros_control/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>dynamixel_workbench_msgs</exec_depend>
  <exec_depend>dynamixel_workbench_toolbox</exec_depend>

</package>
